--- a/index.html
+++ b/index.html
@@ -18,5 +18,17 @@
     </div>
   </div>
 
+  <div class="header-container">
+    <div class="header">
+      <div class="subscribe">Subscribe &#9662;</div>
+      <div class="logo">
+        <img src="./images/awesome-logo.svg" alt="awesome logo">
+      </div>
+      <div class="social">
+        <img src="./images/social-icons.svg" alt="social icons">
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
